<resources>
    <string name="app_name">Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="a_z">A-Z</string>
    <string name="temperature">Temperature</string>
    <string name="last_updated">Last Updated</string>
    <string name="refresh">Refresh</string>
    <string name="detailview">Detail View</string>
    <string name="textview">NA</string>
    <string name="not_available">Not Available</string>
    <string name="filter">Filter</string>
</resources>